fix(story): story navigation not visible

--- a/src/scripts/components/stories/story/story.module.css
+++ b/src/scripts/components/stories/story/story.module.css
@@ -1,7 +1,8 @@
 .story {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
+  overflow: auto;
 }
 
 .main {
@@ -9,7 +10,7 @@
   display: flex;
   flex-direction: row;
   overflow: hidden;
-  height: 100%;
+  height: calc(100% - var(--footer-height));
 }
 
 .main>* {
